<resources>
    <string-array
        name="photo_choice">
        <item>Select photo from gallery</item>
        <item>Capture photo from camera</item>
    </string-array>

    <string name="app_name">Xmas Toys</string>
    <string name="add_toy">Add toy</string>
    <string name="login_choice">Sign in</string>

    <string name="toy_name">Toy name</string>
    <string name="year_year">Year</string>
    <string name="toy_story">Story about this toy</string>
    <string name="sign_in_with_e_mail">Sign in with e-mail</string>
    <string name="sign_in_with_google_account">Sign in with Google</string>
    <string name="sigh_in_with_phone_number">Sigh in with phone number</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_with_email">Sign in with e-mail</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="enter_email">Please, enter e-mail</string>
    <string name="enter_password">Please, enter password</string>
    <string name="registering_wait">Registering… Please, wait…</string>
    <string name="sending_instructions_wait">Sending instructions… Please, wait…</string>
    <string name="successfully_registered">Successfully registered</string>
    <string name="successfully_logged_in">Successfully logged in</string>
    <string name="registration_error">Registration Error</string>
    <string name="login_error">Login Error</string>
    <string name="logging_wait">Logging in… Please, wait…</string>
    <string name="reset_password">Reset password</string>
    <string name="email_for_reset_password">We just need your registered e-mail address to send you password reset instructions</string>
    <string name="sent_instructions">Further instructions have been sent to your e-mail address.</string>
    <string name="failed_to_send_instructions">Failed to send e-mail with instructions!</string>
    <string name="check_email">Please, check your e-mail</string>
    <string name="password_length">Password should contain at least 6 symbols</string>
    <string name="email_error">E-mail address is wrong</string>
    <string name="password_error">Password should be at least 6 characters</string>
    <string name="toy_added">Toy has been added</string>
    <string name="toy_not_added">Failed to add toy</string>
    <string name="toy_not_updated">Failed to update toy</string>
    <string name="toy_updated">Toy has been updated</string>
    <string name="year_length">Year should contain 4 digit</string>
    <string name="add_photo">Add photo</string>
    <string name="failed_take_picture_from_gallery">Can\'t take picture from the gallery</string>
    <string name="edit_toy">Edit toy</string>
    <string name="image_deleted">Image has been deleted</string>
    <string name="image_saved">Image has been saved</string>
    <string name="image_not_deleted">Image has not been deleted</string>
    <string name="image_added">Toy image has been added to Firestore Storage</string>
    <string name="toy_deleted">Toy has been deleted</string>
    <string name="toy_not_deleted">\"Toy has not been deleted\"</string>
    <string name="confirm">Confirm</string>
    <string name="sure_delete_toy">Are you sure that you want to delete this toy?</string>
</resources>