<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/email_login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppThemeBar2"
        app:popupTheme="@style/AppThemeBar2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <EditText
            android:id="@+id/log_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/viewMargin"
            android:layout_marginLeft="@dimen/viewMargin"
            android:layout_marginEnd="@dimen/viewMargin"
            android:layout_marginRight="@dimen/viewMargin"
            android:layout_marginTop="@dimen/viewMargin"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mail" />

        <EditText
            android:id="@+id/log_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/viewMargin"
            android:layout_marginLeft="@dimen/viewMargin"
            android:layout_marginEnd="@dimen/viewMargin"
            android:layout_marginRight="@dimen/viewMargin"
            android:layout_marginTop="@dimen/viewMargin"
            android:layout_below="@id/log_email_edit_text"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <LinearLayout
            android:id="@+id/two_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/log_password_edit_text">

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/viewMargin"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/login"
                android:textColor="@color/colorTextIcons"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/viewMargin"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/register"
                android:textColor="@color/colorTextIcons"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/forgot_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/viewMargin"
            android:layout_marginLeft="@dimen/viewMargin"
            android:layout_marginEnd="@dimen/viewMargin"
            android:layout_marginRight="@dimen/viewMargin"
            android:layout_below="@id/two_buttons"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimaryDark"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>