<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/forgot_password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/viewMargin"
            android:layout_marginLeft="@dimen/viewMargin"
            android:layout_marginEnd="@dimen/viewMargin"
            android:layout_marginRight="@dimen/viewMargin"
            android:layout_marginTop="@dimen/viewMargin"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimaryDark"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/additional_message_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/viewMargin"
            android:layout_marginLeft="@dimen/viewMargin"
            android:layout_marginEnd="@dimen/viewMargin"
            android:layout_marginRight="@dimen/viewMargin"
            android:layout_marginTop="@dimen/viewMargin"
            android:layout_below="@+id/forgot_password_text_view"
            android:text="@string/email_for_reset_password"
            android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

        <EditText
            android:id="@+id/registered_email_edit_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/viewMargin"
            android:layout_marginLeft="@dimen/viewMargin"
            android:layout_marginEnd="@dimen/viewMargin"
            android:layout_marginRight="@dimen/viewMargin"
            android:layout_marginTop="@dimen/viewMargin"
            android:layout_below="@id/additional_message_text_view"
            android:hint="@string/e_mail" />

        <Button
            android:id="@+id/reset_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/viewMargin"
            android:layout_marginLeft="@dimen/viewMargin"
            android:layout_marginEnd="@dimen/viewMargin"
            android:layout_marginRight="@dimen/viewMargin"
            android:layout_marginTop="@dimen/viewMargin"
            android:layout_below="@id/registered_email_edit_text_view"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/reset_password"
            android:textColor="@color/colorTextIcons"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>