<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--todo make style for buttons-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/email_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="@dimen/viewMargin"
            android:layout_marginLeft="@dimen/viewMargin"
            android:layout_marginEnd="@dimen/viewMargin"
            android:layout_marginRight="@dimen/viewMargin"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/sign_in_with_e_mail"
            android:textColor="@color/colorTextIcons"

            android:drawableStart="@drawable/ic_email"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:drawablePadding="24dp"
            android:gravity="start|center" />

        <Button
            android:id="@+id/phone_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/viewMargin"
            android:layout_marginStart="@dimen/viewMargin"
            android:layout_marginLeft="@dimen/viewMargin"
            android:layout_marginEnd="@dimen/viewMargin"
            android:layout_marginRight="@dimen/viewMargin"
            android:layout_below="@id/email_button"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/sigh_in_with_phone_number"
            android:textColor="@color/colorTextIcons"

            android:drawableStart="@drawable/ic_phone"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:drawablePadding="24dp"
            android:gravity="start|center" />

        <Button
            android:id="@+id/google_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/viewMargin"
            android:layout_marginStart="@dimen/viewMargin"
            android:layout_marginLeft="@dimen/viewMargin"
            android:layout_marginEnd="@dimen/viewMargin"
            android:layout_marginRight="@dimen/viewMargin"
            android:layout_below="@id/phone_button"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/sign_in_with_google_account"
            android:textColor="@color/colorTextIcons"

            android:drawableStart="@drawable/ic_google"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:drawablePadding="24dp"
            android:gravity="start|center" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>