<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/email_registration_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppThemeBar2"
        app:popupTheme="@style/AppThemeBar2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/viewMargin"
            android:layout_marginLeft="@dimen/viewMargin"
            android:layout_marginEnd="@dimen/viewMargin"
            android:layout_marginRight="@dimen/viewMargin"
            android:layout_marginTop="@dimen/viewMargin"
            android:hint="@string/e_mail" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/viewMargin"
            android:layout_marginLeft="@dimen/viewMargin"
            android:layout_marginEnd="@dimen/viewMargin"
            android:layout_marginRight="@dimen/viewMargin"
            android:layout_marginTop="@dimen/viewMargin"
            android:layout_below="@id/email_edit_text"
            android:hint="@string/password" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/viewMargin"
            android:layout_marginLeft="@dimen/viewMargin"
            android:layout_marginEnd="@dimen/viewMargin"
            android:layout_marginRight="@dimen/viewMargin"
            android:layout_marginTop="@dimen/viewMargin"
            android:layout_below="@id/password_edit_text"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/register"
            android:textColor="@color/colorTextIcons"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/already_registered_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/viewMargin"
            android:layout_marginLeft="@dimen/viewMargin"
            android:layout_marginEnd="@dimen/viewMargin"
            android:layout_marginRight="@dimen/viewMargin"
            android:layout_marginTop="@dimen/viewMargin"
            android:layout_below="@id/register_button"
            android:text="@string/log_in_email"
            android:textColor="@color/colorPrimaryDark"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>